crates/rules/tests/snapshots/rules_test__rule_package_json_exports.snap
---
source: crates/rules/tests/rules_test.rs
expression: refs
---
- value: "./dist/index.d.ts"
  span_start: 0
  span_end: 0
  kind: import_path
  rule_name: package-json-exports
  is_path: false
  parent_key: "."
  node_path: exports/./types
  group: 1
- value: "./dist/index.js"
  span_start: 0
  span_end: 0
  kind: import_path
  rule_name: package-json-exports
  is_path: false
  parent_key: "."
  node_path: exports/./import
  group: 0
- value: "./dist/math.d.ts"
  span_start: 0
  span_end: 0
  kind: import_path
  rule_name: package-json-exports
  is_path: false
  parent_key: "./math"
  node_path: exports/./math/types
  group: 3
- value: "./dist/math.js"
  span_start: 0
  span_end: 0
  kind: import_path
  rule_name: package-json-exports
  is_path: false
  parent_key: "./math"
  node_path: exports/./math/import
  group: 2
- value: "."
  span_start: 0
  span_end: 0
  kind: package_entry
  rule_name: package-json-exports
  is_path: false
  parent_key: ~
  node_path: exports/./import
  group: 0
- value: "."
  span_start: 0
  span_end: 0
  kind: package_entry
  rule_name: package-json-exports
  is_path: false
  parent_key: ~
  node_path: exports/./types
  group: 1
- value: "./math"
  span_start: 0
  span_end: 0
  kind: package_entry
  rule_name: package-json-exports
  is_path: false
  parent_key: ~
  node_path: exports/./math/import
  group: 2
- value: "./math"
  span_start: 0
  span_end: 0
  kind: package_entry
  rule_name: package-json-exports
  is_path: false
  parent_key: ~
  node_path: exports/./math/types
  group: 3
