crates/rules/tests/snapshots/rules_test__rule_schema.snap
---
source: crates/rules/tests/rules_test.rs
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "RuleSet",
  "description": "Top-level rules file: an array of rules plus optional metadata.",
  "type": "object",
  "required": [
    "rules"
  ],
  "properties": {
    "$schema": {
      "type": [
        "string",
        "null"
      ]
    },
    "link_rules": {
      "description": "Link rules create edges in `match_links` between matches produced by extraction rules. Each link rule supplies a raw SQL WHERE clause that is injected into a fixed query skeleton.\n\n## SQL skeleton\n\nThe engine runs each link rule against this template:\n\n```sql INSERT OR IGNORE INTO match_links (source_match_id, target_match_id, link_kind) SELECT src_m.id, tgt_m.id, '<link_rule.kind>' FROM matches src_m JOIN refs    src_r ON src_m.ref_id     = src_r.id JOIN strings src_s ON src_r.string_id  = src_s.id JOIN files   src_f ON src_r.file_id    = src_f.id JOIN repos   src_rp ON src_f.repo_id   = src_rp.id\n\nJOIN matches tgt_m ON tgt_m.id != src_m.id JOIN refs    tgt_r ON tgt_m.ref_id     = tgt_r.id JOIN strings tgt_s ON tgt_r.string_id  = tgt_s.id JOIN files   tgt_f ON tgt_r.file_id    = tgt_f.id\n\nWHERE src_rp.name = :repo_name AND NOT EXISTS ( SELECT 1 FROM match_links ml WHERE ml.source_match_id = src_m.id AND ml.link_kind = '<link_rule.kind>' ) AND (<link_rule.sql>)        -- ← your WHERE clause goes here ```\n\n## Available columns in your WHERE clause\n\n| Alias   | Table   | Useful columns                                     | |---------|---------|----------------------------------------------------| | src_m   | matches | id, ref_id, rule_name, kind                        | | src_r   | refs    | id, string_id, file_id, span_start, span_end,      | |         |         | target_file_id, parent_key_string_id, node_path     | | src_s   | strings | id, value, norm, norm2                             | | src_f   | files   | id, repo_id, path, stem, ext                       | | src_rp  | repos   | id, name, root_path                                | | tgt_m   | matches | id, ref_id, rule_name, kind                        | | tgt_r   | refs    | id, string_id, file_id, span_start, span_end,      | |         |         | target_file_id, parent_key_string_id, node_path     | | tgt_s   | strings | id, value, norm, norm2                             | | tgt_f   | files   | id, repo_id, path, stem, ext                       |\n\n## Examples\n\nImport binding (scoped to resolved target file, exact string match): ```json { \"kind\": \"import_binding\", \"sql\": \"src_m.kind = 'import_name' AND tgt_m.kind = 'export_name' AND src_r.target_file_id = tgt_r.file_id AND tgt_r.string_id = src_r.string_id\" } ```\n\nCross-repo dep linking by normalized name: ```json { \"kind\": \"dependency\", \"sql\": \"src_m.kind = 'dep_name' AND tgt_m.kind = 'package_name' AND src_s.norm = tgt_s.norm\" } ```\n\n## WARNING: raw SQL injection\n\nThe `sql` field is interpolated directly into the query with no sanitization. This is a local developer toolchain, not a web service. The tradeoff is intentional: full SQL expressiveness for prototyping, with a documented skeleton so the user knows exactly what they're plugging into. A DSL may replace this in the future.",
      "type": "array",
      "items": {
        "$ref": "#/definitions/LinkRule"
      }
    },
    "rules": {
      "type": "array",
      "items": {
        "$ref": "#/definitions/Rule"
      }
    }
  },
  "definitions": {
    "AstSelector": {
      "description": "ast-grep pattern selector for code files.",
      "type": "object",
      "required": [
        "pattern"
      ],
      "properties": {
        "capture": {
          "default": "$NAME",
          "type": "string"
        },
        "language": {
          "type": [
            "string",
            "null"
          ]
        },
        "pattern": {
          "type": "string"
        }
      }
    },
    "LinkRule": {
      "description": "A link rule creates edges in `match_links` between matches.\n\nThe `sql` field is a raw SQL WHERE fragment injected into the skeleton documented on [`RuleSet::link_rules`]. See that doc comment for the full template and available column aliases.",
      "type": "object",
      "required": [
        "kind",
        "sql"
      ],
      "properties": {
        "kind": {
          "description": "Identifier for this link rule. Written to match_links.link_kind and used in log messages.",
          "type": "string"
        },
        "sql": {
          "description": "Raw SQL WHERE clause. Plugged into the skeleton as `AND (<sql>)`. Available aliases: src_m, src_r, src_s, src_f, src_rp, tgt_m, tgt_r, tgt_s, tgt_f.",
          "type": "string"
        }
      }
    },
    "MatchDef": {
      "description": "One match to create from a captured value.",
      "type": "object",
      "required": [
        "capture",
        "kind"
      ],
      "properties": {
        "capture": {
          "description": "Name of the capture to use as the ref value.",
          "type": "string"
        },
        "kind": {
          "description": "Free-text kind string (e.g. \"dep_name\", \"helm_value\", \"operation_id\").",
          "type": "string"
        },
        "parent": {
          "description": "Name of another capture to use as parent_key (links related refs).",
          "type": [
            "string",
            "null"
          ]
        }
      }
    },
    "Rule": {
      "description": "A single extraction rule.\n\nThe `select` chain is a CSS selector against the full index DOM: root > repo > branch > tag > folder* > file > (parsed tree nodes)\n\nContext steps (Repo, Branch, Tag, Folder, File) filter by git context and file path before the file is parsed. Structural steps (Key, KeyMatch, Any, etc.) walk the parsed tree to produce captures.\n\nOrdering constraint enforced at compile time: all context steps must precede all structural steps.",
      "type": "object",
      "required": [
        "create_matches",
        "name",
        "select"
      ],
      "properties": {
        "confidence": {
          "description": "Confidence score override (0.0 to 1.0). Default: 0.8 for rule matches.",
          "type": [
            "number",
            "null"
          ],
          "format": "double"
        },
        "create_matches": {
          "description": "Each entry turns a named capture into a match row.",
          "type": "array",
          "items": {
            "$ref": "#/definitions/MatchDef"
          }
        },
        "description": {
          "type": [
            "string",
            "null"
          ]
        },
        "name": {
          "type": "string"
        },
        "select": {
          "type": "array",
          "items": {
            "$ref": "#/definitions/SelectStep"
          }
        },
        "select_ast": {
          "anyOf": [
            {
              "$ref": "#/definitions/AstSelector"
            },
            {
              "type": "null"
            }
          ]
        },
        "value": {
          "description": "Regex applied to a named capture to split/filter it. Named groups from the regex merge back into the capture map.",
          "anyOf": [
            {
              "$ref": "#/definitions/ValuePattern"
            },
            {
              "type": "null"
            }
          ]
        }
      }
    },
    "SelectStep": {
      "description": "One step in a selector chain.\n\nContext steps filter before parsing. Structural steps walk the parsed tree. Pattern fields use pipe-delimited glob syntax: `\"main|release/*\"`.\n\nFor Folder: `*` captures one path segment, `**` captures the remaining path. For File: glob matches against the full relative file path.",
      "oneOf": [
        {
          "description": "Filter by repository name (pipe-delimited glob).",
          "type": "object",
          "required": [
            "pattern",
            "step"
          ],
          "properties": {
            "capture": {
              "type": [
                "string",
                "null"
              ]
            },
            "pattern": {
              "type": "string"
            },
            "step": {
              "type": "string",
              "enum": [
                "repo"
              ]
            }
          }
        },
        {
          "description": "Filter by branch name (pipe-delimited glob).",
          "type": "object",
          "required": [
            "pattern",
            "step"
          ],
          "properties": {
            "capture": {
              "type": [
                "string",
                "null"
              ]
            },
            "pattern": {
              "type": "string"
            },
            "step": {
              "type": "string",
              "enum": [
                "branch"
              ]
            }
          }
        },
        {
          "description": "Filter by git tag (pipe-delimited glob).",
          "type": "object",
          "required": [
            "pattern",
            "step"
          ],
          "properties": {
            "capture": {
              "type": [
                "string",
                "null"
              ]
            },
            "pattern": {
              "type": "string"
            },
            "step": {
              "type": "string",
              "enum": [
                "tag"
              ]
            }
          }
        },
        {
          "description": "Filter by directory path (pipe-delimited glob against dir portion).",
          "type": "object",
          "required": [
            "pattern",
            "step"
          ],
          "properties": {
            "capture": {
              "type": [
                "string",
                "null"
              ]
            },
            "pattern": {
              "type": "string"
            },
            "step": {
              "type": "string",
              "enum": [
                "folder"
              ]
            }
          }
        },
        {
          "description": "Filter by file path (pipe-delimited glob against full relative path).",
          "type": "object",
          "required": [
            "pattern",
            "step"
          ],
          "properties": {
            "capture": {
              "type": [
                "string",
                "null"
              ]
            },
            "pattern": {
              "type": "string"
            },
            "step": {
              "type": "string",
              "enum": [
                "file"
              ]
            }
          }
        },
        {
          "description": "Enter the child with this exact key name.",
          "type": "object",
          "required": [
            "name",
            "step"
          ],
          "properties": {
            "capture": {
              "type": [
                "string",
                "null"
              ]
            },
            "name": {
              "type": "string"
            },
            "step": {
              "type": "string",
              "enum": [
                "key"
              ]
            }
          }
        },
        {
          "description": "Enter children whose key matches this glob pattern (pipe-delimited).",
          "type": "object",
          "required": [
            "pattern",
            "step"
          ],
          "properties": {
            "capture": {
              "type": [
                "string",
                "null"
              ]
            },
            "pattern": {
              "type": "string"
            },
            "step": {
              "type": "string",
              "enum": [
                "key_match"
              ]
            }
          }
        },
        {
          "description": "Descend through any number of levels (like CSS `**` or jq `..`).",
          "type": "object",
          "required": [
            "step"
          ],
          "properties": {
            "step": {
              "type": "string",
              "enum": [
                "any"
              ]
            }
          }
        },
        {
          "description": "Filter: current depth >= n (0 = root).",
          "type": "object",
          "required": [
            "n",
            "step"
          ],
          "properties": {
            "n": {
              "type": "integer",
              "format": "uint32",
              "minimum": 0.0
            },
            "step": {
              "type": "string",
              "enum": [
                "depth_min"
              ]
            }
          }
        },
        {
          "description": "Filter: current depth <= n.",
          "type": "object",
          "required": [
            "n",
            "step"
          ],
          "properties": {
            "n": {
              "type": "integer",
              "format": "uint32",
              "minimum": 0.0
            },
            "step": {
              "type": "string",
              "enum": [
                "depth_max"
              ]
            }
          }
        },
        {
          "description": "Filter: current depth == n.",
          "type": "object",
          "required": [
            "n",
            "step"
          ],
          "properties": {
            "n": {
              "type": "integer",
              "format": "uint32",
              "minimum": 0.0
            },
            "step": {
              "type": "string",
              "enum": [
                "depth_eq"
              ]
            }
          }
        },
        {
          "description": "Filter: parent key matches this glob pattern.",
          "type": "object",
          "required": [
            "pattern",
            "step"
          ],
          "properties": {
            "pattern": {
              "type": "string"
            },
            "step": {
              "type": "string",
              "enum": [
                "parent_key"
              ]
            }
          }
        },
        {
          "description": "Descend into array elements.",
          "type": "object",
          "required": [
            "step"
          ],
          "properties": {
            "step": {
              "type": "string",
              "enum": [
                "array_item"
              ]
            }
          }
        },
        {
          "description": "Filter: node is a leaf (string, number, bool). Captures the leaf value.",
          "type": "object",
          "required": [
            "step"
          ],
          "properties": {
            "capture": {
              "type": [
                "string",
                "null"
              ]
            },
            "step": {
              "type": "string",
              "enum": [
                "leaf"
              ]
            }
          }
        },
        {
          "description": "Capture multiple sibling keys from an object node at once. Map of json_key -> capture_name. Example: `{ \"repository\": \"repo\", \"tag\": \"tag\" }`",
          "type": "object",
          "required": [
            "captures",
            "step"
          ],
          "properties": {
            "captures": {
              "type": "object",
              "additionalProperties": {
                "type": "string"
              }
            },
            "step": {
              "type": "string",
              "enum": [
                "object"
              ]
            }
          }
        }
      ]
    },
    "ValuePattern": {
      "description": "Regex applied to a named capture. Named groups from the regex merge into the capture map, enabling split/transform of captured values.",
      "type": "object",
      "required": [
        "pattern",
        "source"
      ],
      "properties": {
        "full_match": {
          "description": "Anchor the regex to the full string. Default: true.",
          "default": true,
          "type": "boolean"
        },
        "pattern": {
          "description": "Regex pattern with named groups via `(?P<name>...)`.",
          "type": "string"
        },
        "source": {
          "description": "Which capture to run the regex against.",
          "type": "string"
        }
      }
    }
  }
}
