crates/rules/tests/snapshots/rules_test__rule_tsconfig_paths.snap
---
source: crates/rules/tests/rules_test.rs
expression: refs
---
- value: src/components/*
  span_start: 0
  span_end: 0
  kind: import_path
  rule_name: tsconfig-paths
  is_path: false
  parent_key: "@components/*"
  node_path: compilerOptions/paths/@components/*/0
- value: src/config/index.ts
  span_start: 0
  span_end: 0
  kind: import_path
  rule_name: tsconfig-paths
  is_path: false
  parent_key: "@config"
  node_path: compilerOptions/paths/@config/0
- value: src/shared/components/*
  span_start: 0
  span_end: 0
  kind: import_path
  rule_name: tsconfig-paths
  is_path: false
  parent_key: "@components/*"
  node_path: compilerOptions/paths/@components/*/1
- value: src/utils/*
  span_start: 0
  span_end: 0
  kind: import_path
  rule_name: tsconfig-paths
  is_path: false
  parent_key: "@utils/*"
  node_path: compilerOptions/paths/@utils/*/0
- value: "@components/*"
  span_start: 0
  span_end: 0
  kind: path_alias
  rule_name: tsconfig-paths
  is_path: false
  parent_key: ~
  node_path: compilerOptions/paths/@components/*/0
- value: "@components/*"
  span_start: 0
  span_end: 0
  kind: path_alias
  rule_name: tsconfig-paths
  is_path: false
  parent_key: ~
  node_path: compilerOptions/paths/@components/*/1
- value: "@config"
  span_start: 0
  span_end: 0
  kind: path_alias
  rule_name: tsconfig-paths
  is_path: false
  parent_key: ~
  node_path: compilerOptions/paths/@config/0
- value: "@utils/*"
  span_start: 0
  span_end: 0
  kind: path_alias
  rule_name: tsconfig-paths
  is_path: false
  parent_key: ~
  node_path: compilerOptions/paths/@utils/*/0
