crates/rules/tests/snapshots/rules_test__tsp_cargo_deps.snap
---
source: crates/rules/tests/rules_test.rs
expression: refs
---
- value: axum
  span_start: 0
  span_end: 0
  kind: DepName
  is_path: false
  parent_key: ~
  node_path: dependencies/axum
- value: insta
  span_start: 0
  span_end: 0
  kind: DepName
  is_path: false
  parent_key: ~
  node_path: dev-dependencies/insta
- value: serde
  span_start: 0
  span_end: 0
  kind: DepName
  is_path: false
  parent_key: ~
  node_path: dependencies/serde
- value: tokio
  span_start: 0
  span_end: 0
  kind: DepName
  is_path: false
  parent_key: ~
  node_path: dependencies/tokio
