crates/rules/tests/snapshots/rules_test__tsp_package_exports.snap
---
source: crates/rules/tests/rules_test.rs
expression: refs
---
- value: "./codegen"
  span_start: 0
  span_end: 0
  kind: export_name
  rule_name: test
  is_path: false
  parent_key: ~
  node_path: exports/./codegen/import
- value: "./codegen"
  span_start: 0
  span_end: 0
  kind: export_name
  rule_name: test
  is_path: false
  parent_key: ~
  node_path: exports/./codegen/types
- value: "./dist/src/codegen/index.d.ts"
  span_start: 0
  span_end: 0
  kind: import_path
  rule_name: test
  is_path: false
  parent_key: "./codegen"
  node_path: exports/./codegen/types
- value: "./dist/src/codegen/index.js"
  span_start: 0
  span_end: 0
  kind: import_path
  rule_name: test
  is_path: false
  parent_key: "./codegen"
  node_path: exports/./codegen/import
- value: "./dist/src/factory/index.d.ts"
  span_start: 0
  span_end: 0
  kind: import_path
  rule_name: test
  is_path: false
  parent_key: "./factory"
  node_path: exports/./factory/types
- value: "./dist/src/factory/index.js"
  span_start: 0
  span_end: 0
  kind: import_path
  rule_name: test
  is_path: false
  parent_key: "./factory"
  node_path: exports/./factory/import
- value: "./factory"
  span_start: 0
  span_end: 0
  kind: export_name
  rule_name: test
  is_path: false
  parent_key: ~
  node_path: exports/./factory/import
- value: "./factory"
  span_start: 0
  span_end: 0
  kind: export_name
  rule_name: test
  is_path: false
  parent_key: ~
  node_path: exports/./factory/types
